@@ -1,0 +1,22 @@
+<?xml version="1.0"?>
+
+<!DOCTYPE MODE SYSTEM "xmode.dtd">
+
+<!--
+<MODE NAME="svn-commit"		FILE="svn-commit.xml"/>
+-->
+
+<MODE>
+	<RULES IGNORE_CASE="TRUE" HIGHLIGHT_DIGITS="FALSE">
+		<SEQ TYPE="COMMENT1" 
+			DELEGATE="CHANGED" 
+			AT_LINE_START="TRUE"
+		>--This line, and those below, will be ignored--</SEQ>
+	</RULES>
+	<RULES SET="CHANGED">
+		<EOL_SPAN AT_LINE_START="TRUE" TYPE="COMMENT2">A</EOL_SPAN>
+		<EOL_SPAN AT_LINE_START="TRUE" TYPE="COMMENT2">D</EOL_SPAN>
+		<EOL_SPAN AT_LINE_START="TRUE" TYPE="COMMENT2">M</EOL_SPAN>
+		<EOL_SPAN AT_LINE_START="TRUE" TYPE="COMMENT2">_</EOL_SPAN>
+	</RULES>
+</MODE>
